--- a/usr_login.css
+++ b/usr_login.css
@@ -4,6 +4,8 @@
     text-align: center;
     font-size:300%;
     font-family: "Trebuchet MS", Helvetica, sans-serif;
+    font :bold;
+    
 }
 
 .login-page {
@@ -34,7 +36,7 @@
   font-size: 14px;
 }
 button {
-  background-color: #86d1e0; /* white */
+  background-color: #6abf6a; /* white */
   border: solid;
   border-radius: 5px;
   color: white;
@@ -46,13 +48,20 @@ button {
   cursor: pointer;
   padding: 15px;
 }
+#log_me_in{
+  width:50%;
+}
 
 #back_button:hover{
   background: green;
+  transition: 0.5s;
+  transform-style:flat;
 }
 .form button:hover,.form button:active,.form button:focus {
   background: green;
-  width: 100%;
+  width: 50%;
+  transition: .5s;
+  
 }
 .form .message {
   margin: 15px 0 0;
@@ -101,4 +110,22 @@ button {
 }
 body {
   font-family: "Roboto", sans-serif;
+}
+h3{
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size:large;
+  color:#231fad;
+  text-shadow:darkgoldenrod;
+  font-size: 30px;
+}
+@media (max-width:670px){
+  .login-page{
+    width: 50%;
+  }
+}
+
+/* Registration form  */
+
+.register-form{
+  background-color: #4CAF50;
 }
